--- a/calendar.html
+++ b/calendar.html
@@ -58,7 +58,7 @@ td,th {
 }
 th {
     padding: 10px;
-    /* background-color: #000000;
+    /* background-color: #66A0D5;
     color: #fff; */
     /* font-weight: normal; */
 }
